--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "technical-test",
+  "author": {
+    "name": "Rajaonarivony Lantonirina Onitiana Mamisoa",
+    "email": "ramamilanto@gmail.com"
+  },
   "version": "0.1.0",
   "private": true,
   "scripts": {
