--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@reduxjs/toolkit": "^1.9.2",
+    "@types/amqplib": "^0.10.1",
     "@types/node": "16.18.1",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "amqplib": "^0.10.3",
     "clsx": "^1.2.1",
     "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.1.8",
@@ -26,6 +29,8 @@
     "next-intercom": "^0.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
