--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metamask/onboarding": "^1.0.1",
+    "@metamask/providers": "^10.2.1",
     "@next/font": "13.1.2",
     "@reduxjs/toolkit": "^1.9.2",
     "@types/amqplib": "^0.10.1",
